@startuml

abstract class Usuario {
  +String id
  +String nome
  +String email
  +String senha
  +String cpf
  +String telefone
}

class Cliente {
  +String endereco
}

class Funcionario {
  +String cargo
}

class Endereco {
  +String id
  +String usuarioId
  +String logradouro
  +String numero
  +String bairro
  +String cidade
  +String cep
}

class Produto {
  +String id
  +String nome
  +Float preco
  +Int estoque
  +String categoria
}

class Pedido {
  +String id
  +String clienteId
  +String status
  +Float valorTotal
  +DateTime dataCriacao
}

class ItemPedido {
  +String id
  +String pedidoId
  +String produtoId
  +Int quantidade
  +Float preco
}

Usuario <|-- Cliente
Usuario <|-- Funcionario
Usuario "1" -- "0..*" Endereco
Cliente "1" -- "0..*" Pedido
Pedido "1" *-- "1..*" ItemPedido
Produto "1" -- "0..*" ItemPedido

@enduml